tests/paczka1/fuzzy1/63615061.err
Error in line 23: VKSyt5 A545 50,99
Error in line 33: itEF1GeLOtU A953 17,2
